# hdf5-tester

./: .coveragerc  .mypy.ini  .travis.yml  README.md  h5tester.py  hdf5check.py  setup.cfg  setup.py
.github/workflows/: ci.yml
hdf5tester/: __init__.py
tests/: test_all.py
